// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`configCommand should fail with no result 2`] = `
{
  "logCalls": [
    [
      "error",
      "Could not find any results for "nothing_here".",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`configCommand should fail with unexisting config name 2`] = `
{
  "logCalls": [
    [
      "error",
      "No config found for "DOES_NOT_EXIST"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
}
`;

exports[`configCommand should work with an unexisting config but a default value 2`] = `
{
  "logCalls": [
    [
      "error",
      "No config found for "DOES_NOT_EXIST"",
    ],
    [
      "info",
      ""v8"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`configCommand should work with no query at all 2`] = `
{
  "logCalls": [
    [
      "info",
      "{"auth":{"username":"root"},"version":"2.1.1"}",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`configCommand should work with no result but a default value 2`] = `
{
  "logCalls": [
    [
      "error",
      "Could not find any results for "nothing_here".",
    ],
    [
      "info",
      ""v8"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`configCommand should work with one value 2`] = `
{
  "logCalls": [
    [
      "info",
      ""root"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;

exports[`configCommand should work with several values 2`] = `
{
  "logCalls": [
    [
      "info",
      ""root"",
    ],
  ],
  "promptArgsCalls": [
    [],
  ],
  "result": undefined,
}
`;
